[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[features]
gtk_ui = [ "gtk4"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
gtk4 = {  version = "0.9.3", optional = true }
threadpool = "1.8.1"
lazy_static = "1.5.0"
rand = "0.9.0-alpha.2"