[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"

[features]
gtk_ui = [ "gtk4"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gtk4 = {  version = "0.9", optional = true }
threadpool = "1.8"
lazy_static = "1.5"
rand = "0.9.0-beta.1"
nom = "7.1.3"
